// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search actions creates FETCH_SEARCH_FAILURE when fetching video ids has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_SEARCH_REQUEST",
  },
  Object {
    "type": "FETCH_SEARCH_FAILURE",
  },
]
`;

exports[`search actions creates FETCH_SEARCH_FAILURE when fetching videos has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_SEARCH_REQUEST",
  },
  Object {
    "type": "FETCH_SEARCH_FAILURE",
  },
]
`;

exports[`search actions creates FETCH_SEARCH_SUCCESS when fetching video ids has resolved with null 1`] = `
Array [
  Object {
    "type": "FETCH_SEARCH_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [],
      "nextPageToken": "",
    },
    "type": "FETCH_SEARCH_SUCCESS",
  },
]
`;

exports[`search actions creates FETCH_SEARCH_SUCCESS when fetching video ids has resolved with undefined 1`] = `
Array [
  Object {
    "type": "FETCH_SEARCH_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [],
      "nextPageToken": "",
    },
    "type": "FETCH_SEARCH_SUCCESS",
  },
]
`;

exports[`search actions creates FETCH_SEARCH_SUCCESS when fetching videos has been resolved 1`] = `
Array [
  Object {
    "type": "FETCH_SEARCH_REQUEST",
  },
  Object {
    "payload": Object {
      "items": Array [
        "M8l2aGMjKHI",
        "GcSACxUbqtg",
      ],
      "nextPageToken": "CBQQAA",
    },
    "type": "FETCH_SEARCH_SUCCESS",
  },
]
`;

exports[`search actions should create actions to clear search 1`] = `
Array [
  Object {
    "payload": "",
    "type": "UPDATE_SEARCH_QUERY",
  },
  Object {
    "type": "CLEAR_SEARCH_RESULTS",
  },
]
`;

exports[`search actions should create actions to update search 1`] = `
Array [
  Object {
    "type": "CLEAR_SEARCH_RESULTS",
  },
  Object {
    "payload": "a",
    "type": "UPDATE_SEARCH_QUERY",
  },
]
`;

exports[`search actions should create an action to handle an error 1`] = `
Object {
  "type": "FETCH_SEARCH_FAILURE",
}
`;

exports[`search actions should create an action to receive search 1`] = `
Object {
  "payload": Object {
    "items": Array [
      "M8l2aGMjKHI",
      "GcSACxUbqtg",
    ],
    "nextPageToken": "CBQQAA",
  },
  "type": "FETCH_SEARCH_SUCCESS",
}
`;

exports[`search actions should create an action to request search 1`] = `
Object {
  "type": "FETCH_SEARCH_REQUEST",
}
`;
